Add endorctl download post start

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,9 @@
 			"installMaven": "true",
 			"installGradle": "false"
 		}
-	}
+	},
+	"postStartCommand": "curl https://api.endorlabs.com/download/endorlabs/v1.7.198/binaries/endorctl_v1.7.198_linux_amd64 -o endorctl && chmod +x ./endorctl && alias endorctl='$PWD/endorctl'"
+
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
